feat(backfill): compute signals for all historical dates on first run
SignalComputationService.computeAndStore() now performs incremental
historical backfill:

- On first run (no signals yet): processes ALL trade dates in raw_prices,
  oldest to newest. A 5-year dataset (~1,260 dates) produces full RRG trails
  and composite score history needed by the backtester and heatmap.
- On subsequent runs: only processes dates after the latest existing signal
  date (incremental — typically 0-1 new dates per daily ingestion).
- Prices loaded once per run, sliced per signal date by date window filter —
  avoids N+1 database queries during backfill.
- Rows are upserted in chunks of 5,000 to keep transactions manageable.
- Logs a clear WARNING when backfilling historical dates that the current
  macro regime is used for all of them (known bias for backtesting).

SignalRepository additions:
- findLatestSignalDate(): Optional<LocalDate> — drives incremental cutoff
- findAllTradeDatesAscending(): all distinct trade dates from raw_prices

SignalComputationServiceIT updated:
- shouldComputeAllSignalTypesWhenDataSufficient: now asserts latest date
  has all 9 signal types AND that multiple dates were backfilled (>1 date)
- shouldOmitSignalTypesWithInsufficientData: now asserts per-date signals
  at SIGNAL_DATE rather than entire result set

135 tests pass.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>